--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,17 @@
   text-align: center;
 }
 
+.bottom-navigation {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  background-color: white;
+  box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.2);
+  z-index: 1000;
+}
+
+
 .logo {
   height: 6em;
   padding: 1.5em;
