--- a/src/index.css
+++ b/src/index.css
@@ -29,6 +29,8 @@ body {
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
+  padding-bottom: 56px; /* Bottom Navigation yüksekliği kadar boşluk bırak */
+
 }
 
 h1 {
