--- a/src/App.css
+++ b/src/App.css
@@ -5,38 +5,23 @@
   text-align: center;
 }
 
-.app-container {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  z-index: 9999; /* Uygulamanın diğer unsurların üzerine gelmesini sağlar */
-}
-
-.overlay-elements {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.5); /* Overlay arka plan rengi */
-  z-index: 10000; /* Overlay'ın uygulamanın üzerine gelmesini sağlar */
-}
-
-
 .bottom-navigation {
   position: fixed;
   bottom: 0;
   left: 0;
-  right: 0; /* Sağ ve sola yapıştırmak için */
+  right: 0;
   width: 100%;
-  background-color: white; /* İstediğin arka plan rengini ayarla */
-  box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.2); /* Gölgelendirme eklemek için */
+  background-color: white;
+  box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.2);
   z-index: 1000;
 }
 
-
+@media (max-width: 600px) {
+  .bottom-navigation {
+    height: 56px;
+    font-size: 0.8rem;
+  }
+}
 
 .logo {
   height: 6em;
@@ -44,9 +29,11 @@
   will-change: filter;
   transition: filter 300ms;
 }
+
 .logo:hover {
   filter: drop-shadow(0 0 2em #646cffaa);
 }
+
 .logo.react:hover {
   filter: drop-shadow(0 0 2em #61dafbaa);
 }
