--- a/src/App.css
+++ b/src/App.css
@@ -7,10 +7,12 @@
 
 .bottom-navigation {
   position: fixed;
-  bottom: 2px;
+  bottom: 0;
   left: 0;
   right: 0;
   width: 100%;
+  height: 56px;
+
   background-color: white;
   box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.2);
   z-index: 1000;
@@ -18,7 +20,6 @@
 
 @media (max-width: 600px) {
   .bottom-navigation {
-    height: 56px;
     font-size: 0.8rem;
   }
 }
