--- a/src/App.css
+++ b/src/App.css
@@ -6,12 +6,13 @@
 }
 
 .bottom-navigation {
-  position: fixed;
+  position: sticky;
   bottom: 0;
   left: 0;
   right: 0;
   width: 100%;
   height: 56px;
+  backface-visibility: hidden; /* Bu özelliği ekleyin */
 
   background-color: white;
   box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.2);
