--- a/src/App.css
+++ b/src/App.css
@@ -12,11 +12,14 @@
   position: fixed;
   left: 0;
   right: 0;
+  bottom: 0;
   width: 100%;
   height: 76px; /* Sabit navigation yüksekliği */
   background-color: white;
   box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.2);
   z-index: 1000;
+  touch-action: none; /* Kaydırmayı devre dışı bırakır */
+
 }
 
 @media (max-width: 600px) {
