--- a/src/App.css
+++ b/src/App.css
@@ -1,17 +1,23 @@
 html, body {
   height: 100%;
   margin: 0;
-  overflow: hidden; /* Sayfanın genel kaydırmasını devre dışı bırakır */
+  overflow: hidden; /* Genel kaydırmayı devre dışı bırakır */
 }
 
 #root {
   display: flex;
   flex-direction: column;
-  height: 100vh; /* Tam ekran yüksekliği */
-  margin: 0 auto;
-  padding: 2rem;
-  padding-bottom: 76px; /* Sabit navigation için alt boşluk bırakın */
-  overflow-y: auto; /* İçerik kaydırma */
+  height: 100vh;
+}
+
+.main-content {
+  flex: 1;
+  overflow-y: auto; /* İçerik kaydırmasını sağlar */
+  scrollbar-width: none; /* Firefox */
+}
+
+.main-content::-webkit-scrollbar {
+  display: none; /* WebKit tabanlı tarayıcılar için */
 }
 
 .bottom-navigation {
@@ -24,54 +30,4 @@ html, body {
   background-color: white;
   box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.2);
   z-index: 1000;
-  touch-action: none; /* Kaydırmayı devre dışı bırakır */
-}
-
-@media (max-width: 600px) {
-  .bottom-navigation {
-    height: 56px;
-    font-size: 0.8rem;
-  }
-
-  #root {
-    padding-bottom: 56px; /* Mobilde de sabit navigation için alt boşluk bırakın */
-  }
-}
-
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
 }
