--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 html, body {
   height: 100%;
   margin: 0;
-  overflow: hidden; /* Genel kaydırmayı devre dışı bırakır */
+  overflow: hidden; /* Disables global scrolling */
 }
 
 #root {
@@ -13,22 +13,39 @@ html, body {
 
 .main-content {
   flex: 1;
-  overflow-y: auto; /* İçerik kaydırmasını sağlar */
+  overflow-y: auto; /* Enables content scrolling */
   scrollbar-width: none; /* Firefox */
 }
 
 .main-content::-webkit-scrollbar {
-  display: none; /* WebKit tabanlı tarayıcılar için */
+  display: none; /* WebKit-based browsers */
 }
 
 .bottom-navigation {
   position: fixed;
   left: 0;
-  right: 0;
   bottom: 0;
+  right: 0;
   width: 100%;
-  height: 100px; /* Sabit navigation yüksekliği */
-  background-color: white;
+  background-color: #000000 !important; /* Navigation background color */
+  height: 90px; /* Fixed height for the navigation bar */
   box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.2);
   z-index: 1000;
+}
+
+/* BottomNavigation için arka plan rengini ve border özelliklerini ayarlayın */
+
+
+.bottom-navigation .MuiBottomNavigationAction-root {
+  color: #9e9e9e; /* İkonların gri rengi */
+  border: 1px solid #000000; /* Kenarlıkları siyah yapın */
+  border-radius: 4px; /* Köşeleri yuvarlatma */
+}
+
+
+
+.bottom-navigation .MuiBottomNavigationAction-root.Mui-selected {
+  background-color: #000000; /* Seçili durumunda arka plan rengini beyaz yapın */
+  color: #ffffff; /* Seçili durumda ikonların rengi siyah */
+  border: 1px solid #000000; /* Seçili durumda kenarlıkları siyah yapın */
 }
