--- a/src/index.css
+++ b/src/index.css
@@ -3,9 +3,9 @@
   line-height: 1.5;
   font-weight: 400;
 
-  color-scheme: light dark;
+  color-scheme: dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  background-color: #121212;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -16,11 +16,11 @@
 
 a {
   font-weight: 500;
-  color: #646cff;
+  color: #82aaff; /* Mavi link rengi */
   text-decoration: inherit;
 }
 a:hover {
-  color: #535bf2;
+  color: #a6bffc; /* Açık mavi link rengi hover durumda */
 }
 
 body {
@@ -29,42 +29,82 @@ body {
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
-
+  background-color: #121212;
 }
 
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
+  color: #ffffff; /* Beyaz başlık rengi */
 }
 
 button {
   border-radius: 8px;
-  border: 1px solid transparent;
+  border: 1px solid #444444; /* Düzgün bir kenarlık rengi */
   padding: 0.6em 1.2em;
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  background-color: #fff9f9;
+  background-color: #333333; /* Koyu gri buton arka planı */
+  color: #ffffff; /* Beyaz metin rengi */
   cursor: pointer;
-  transition: border-color 0.25s;
+  transition: border-color 0.25s, background-color 0.25s, color 0.25s;
 }
 button:hover {
-  border-color: #646cff;
+  border-color: #82aaff; /* Mavi kenarlık rengi hover durumda */
+  background-color: #444444; /* Biraz daha açık gri arka plan hover durumda */
 }
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #ffffff;
-  }
+html, body {
+  height: 100%;
+  margin: 0;
+  overflow: hidden; /* Disables global scrolling */
+}
+
+#root {
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+  padding: 1rem;
+}
+
+.main-content {
+  flex: 1;
+  overflow-y: auto; /* Enables content scrolling */
+  scrollbar-width: none; /* Firefox */
+}
+.main-content::-webkit-scrollbar {
+  display: none; /* WebKit-based browsers */
+}
+
+.bottom-navigation {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  width: 100%;
+  background-color: #000000 !important; /* Navigation background color */
+  box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.2);
+  z-index: 1000;
+}
+
+.bottom-navigation-action:focus {
+  outline: none !important;
+  border: none !important;
+}
+
+.matrix {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  z-index: -1;
+  color: #0f0;
+  font-family: monospace;
+  font-size: 10px;
 }
