--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,12 @@
-:root {
+html, body, #root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
-
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
   background-color: #000000;
@@ -29,7 +33,8 @@ body {
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
-
+ align-items: center;
+ justify-content: center;
 }
 
 h1 {
