--- a/src/index.css
+++ b/src/index.css
@@ -36,6 +36,17 @@ body {
  align-items: center;
  justify-content: center;
 }
+.hidden {
+  display: none;
+}
+
+.main-content {
+  transition: opacity 0.5s ease;
+}
+
+.main-content.hidden {
+  opacity: 0;
+}
 
 h1 {
   font-size: 3.2em;
