Yerel değişikliklerimi kaydettim

--- a/src/pages/WheelSpin.css
+++ b/src/pages/WheelSpin.css
@@ -39,6 +39,7 @@
   max-width: 80%;
   margin: auto;
   text-align: center;
+  color: black; /* Yazı rengini siyah yapıyoruz */
 }
 
 .modal-overlay {
