--- a/src/pages/WheelSpin.css
+++ b/src/pages/WheelSpin.css
@@ -35,8 +35,7 @@
   background: white;
   border-radius: 10px;
   padding: 20px;
-  width: 300px;
-  max-width: 80%;
+  width: 100%;
   margin: auto;
   text-align: center;
   color: black; /* Yazı rengini siyah yapıyoruz */
