--- a/src/pages/WheelSpin.css
+++ b/src/pages/WheelSpin.css
@@ -34,15 +34,14 @@
 .modal {
   background: white;
   border-radius: 10px;
-  padding: 20px;
   width: 100%;
+  max-width: 100%;
   margin: auto;
   text-align: center;
   color: black; /* Yazı rengini siyah yapıyoruz */
 }
 
 .modal-overlay {
-  background: rgba(0, 0, 0, 0.5);
   display: flex;
   justify-content: center;
   align-items: center;
