--- a/src/pages/WheelSpin.css
+++ b/src/pages/WheelSpin.css
@@ -31,18 +31,18 @@
 }
 
 /* Modal Styles */
-.modal {
-  background: white;
-  border-radius: 10px;
-  width: 100%;
-  max-width: 100%;
-  margin: auto;
-  text-align: center;
-  color: black; /* Yazı rengini siyah yapıyoruz */
-}
-
 .modal-overlay {
+  background: rgba(0, 0, 0, 0.7); /* Modal arka planı */
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+.modal {
+  background: white; /* Modal arka plan rengi */
+  border-radius: 10px;
+  padding: 20px;
+  width: 80%;
+  max-width: 600px;
+  text-align: center;
 }
