--- a/src/index.css
+++ b/src/index.css
@@ -8,17 +8,9 @@ html, body, #root {
   height: 100%;
   overflow: hidden;
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background: #0F2027;  /* fallback for old browsers */
-  background: -webkit-linear-gradient(to right, #2C5364, #203A43, #0F2027);  /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(to right, #2C5364, #203A43, #0F2027); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-  
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-text-size-adjust: 100%;
-}
+  color: rgba(0, 0, 0, 0.87);
+  background: #131313;  /* fallback for old browsers */
+  }
 
 a {
   font-weight: 500;
