add: initial files

--- a/src/index.css
+++ b/src/index.css
@@ -8,9 +8,8 @@ html, body, #root {
   height: 100%;
   overflow: hidden;
   color-scheme: light dark;
-  color: rgba(0, 0, 0, 0.87);
-  background: #131313;  /* fallback for old browsers */
-  }
+  color: rgba(255, 255, 255, 0.87);
+  background: linear-gradient(112.1deg, rgb(32, 38, 57) 11.4%, rgb(72, 86, 129) 70.2%);  }
 
 a {
   font-weight: 500;
