--- a/src/App.css
+++ b/src/App.css
@@ -33,17 +33,14 @@ html, body {
 }
 
 .bottom-navigation {
-  position: fixed;
-  left: 0;
-  bottom: 0;
-  right: 0;
-  width: 100%;
-  background: #141E30;  /* fallback for old browsers */
-  background: -webkit-linear-gradient(to right, #243B55, #141E30);  /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(to right, #243B55, #141E30); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  left: 0%;
+  bottom: 0%;
+  right: 0%;
+
+ 
+  background: linear-gradient(to right, #131313, #252424); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
     z-index: 1000;
 }
-
 
 
 
