--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,8 @@ html, body, #root {
   overflow: hidden;
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background: #131313  }
+  background: #131313  
+}
 
 a {
   font-weight: 500;
