--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,12 @@ html, body, #root {
   margin: 0;
   padding: 0;
   width: 100%;
+  overflow-x: hidden; /* Yatay kaydırmayı engeller */
+
+  touch-action: pan-y; /* Dokunmatik cihazlarda yatay kaydırmayı engeller */
+
+  overflow: hidden; /* Disables global scrolling */
+
   height: 100%;
   overflow: hidden;
   color-scheme: light dark;
@@ -20,10 +26,12 @@ a {
 
 body {
   margin: 0;
+  touch-action: pan-y; /* Dokunmatik cihazlarda yatay kaydırmayı engeller */
   display: flex;
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
+  overflow-x: hidden; /* Yatay kaydırmayı engeller */
  align-items: center;
  justify-content: center;
 }
